# openbsw

./: .cmake-format  .treefmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  README.md  docker-compose.yaml
.ci/: build.py  buildoperations.py  clang-tidy.py  code_coverage.py  determine-clang-tidy-scope.py  doxygen-docs.py  format.py  posix_pytest.py  resolve-clang-tidy-translation-units.py  s32k148_pytest.py  sphinx-docs.py
bazel/config/executable_config/: BUILD.bazel
bazel/platform/: BUILD.bazel
bazel/toolchain/: BUILD.bazel
bazel/toolchain/arm_none_eabi/gcc/: arm_none_eabi_gcc_cc_toolchain_config.bzl
bazel_migration/: README.md
coverage/: index-sort-f.html  index-sort-l.html  index.html
doc/: README.md
docker/: README.md  docker-compose.yaml
doxygen_docs/: annotated.html  annotated_dup.js  classes.html  dir_12dcd59c802ef7fc158ecdfc2ed25eac.html  dir_12dcd59c802ef7fc158ecdfc2ed25eac_dep.map  dir_12dcd59c802ef7fc158ecdfc2ed25eac_dep.md5  dir_180e242aa8806dc497c5e39b1239bbb0.html  dir_180e242aa8806dc497c5e39b1239bbb0_dep.map  dir_180e242aa8806dc497c5e39b1239bbb0_dep.md5  dir_2203d236f22df96802245497e3061dd5.html  dir_2203d236f22df96802245497e3061dd5_dep.map  dir_2203d236f22df96802245497e3061dd5_dep.md5  dir_22acb7ec820299b5e077e8cf80f310fa.html  (+165 more)
libs/bsw/util/: BUILD.bazel
libs/bsw/util/doc/user/: crc.rst
libs/bsw/util/examples/: Crc8Example.cpp  Crc8RohcExample.cpp
libs/bsw/util/include/util/buffer/: LinkedBuffer.h
libs/bsw/util/include/util/command/: CommandContext.h  GroupCommand.h  HelpCommand.h  ICommand.h  IParentCommand.h  ParentCommand.h  SimpleCommand.h
libs/bsw/util/include/util/crc/: Crc.h  Crc16.h  Crc32.h  Crc8.h  LookupTable.h  Reflect.h  Xor.h
libs/bsw/util/include/util/defer/: Defer.h
libs/bsw/util/include/util/estd/: va_list_ref.h
libs/bsw/util/include/util/format/: AttributedString.h  IPrintfArgumentReader.h  Printf.h  PrintfArgumentReader.h  PrintfFormatScanner.h  PrintfFormatter.h  SharedStringWriter.h  StringWriter.h  Vt100AttributedStringFormatter.h
libs/bsw/util/include/util/logger/: ComponentInfo.h  IComponentMapping.h  ILoggerOutput.h  LevelInfo.h  Logger.h  LoggerBinding.h
libs/bsw/util/include/util/math/: MovingAverage.h
libs/bsw/util/include/util/memory/: Bit.h  BuddyMemoryManager.h
libs/bsw/util/include/util/meta/: BinaryValue.h  Bitmask.h
libs/bsw/util/include/util/preprocessor/: Macros.h
libs/bsw/util/include/util/spsc/: Queue.h  ReadWrite.h
libs/bsw/util/include/util/stream/: BspStubs.h  ByteBufferOutputStream.h  INonBlockingInputStream.h  IOutputStream.h  ISharedOutputStream.h  NormalizeLfOutputStream.h  NullOutputStream.h  SharedOutputStream.h  SharedOutputStreamResource.h  StdinStream.h  StdoutStream.h  StringBufferOutputStream.h  TaggedOutputHelper.h  TaggedOutputStream.h  TaggedSharedOutputStream.h
libs/bsw/util/include/util/string/: ConstString.h
libs/bsw/util/include/util/types/: Enum.h
libs/bsw/util/mock/gmock/include/util/: StdIoMock.h
libs/bsw/util/mock/gmock/include/util/estd/: function_mock.h  gtest_extensions.h
libs/bsw/util/mock/gmock/include/util/logger/: ComponentMappingMock.h  LoggerOutputMock.h  TestConsoleLogger.h
libs/bsw/util/mock/gmock/include/util/stream/: OutputStreamMock.h  SharedOutputStreamMock.h
libs/bsw/util/mock/gmock/src/util/: StdIoMock.cpp
libs/bsw/util/mock/gmock/src/util/logger/: TestConsoleLogger.cpp
libs/bsw/util/src/util/command/: CommandContext.cpp  GroupCommand.cpp  HelpCommand.cpp  ParentCommand.cpp  SimpleCommand.cpp
libs/bsw/util/src/util/crc/: LookupTable_0x07.cpp  LookupTable_0x1021.cpp  LookupTable_0x1D.cpp  LookupTable_0x2F.cpp  LookupTable_0x31.cpp  LookupTable_0x4C11DB7.cpp  LookupTable_0xCF.cpp  LookupTable_0xF4ACFB13.cpp
libs/bsw/util/src/util/format/: AttributedString.cpp  PrintfArgumentReader.cpp  PrintfFormatScanner.cpp  PrintfFormatter.cpp  SharedStringWriter.cpp  StringWriter.cpp  Vt100AttributedStringFormatter.cpp
libs/bsw/util/src/util/logger/: ComponentInfo.cpp  LevelInfo.cpp  Logger.cpp
libs/bsw/util/src/util/memory/: BuddyMemoryManager.cpp
libs/bsw/util/src/util/stream/: ByteBufferOutputStream.cpp  NormalizeLfOutputStream.cpp  NullOutputStream.cpp  SharedOutputStream.cpp  StdinStream.cpp  StdoutStream.cpp  StringBufferOutputStream.cpp  TaggedOutputHelper.cpp  TaggedOutputStream.cpp  TaggedSharedOutputStream.cpp
libs/bsw/util/src/util/string/: ConstString.cpp
libs/bsw/util/test/include/fixtures/crc/: CrcTestFixture.h
libs/bsw/util/test/src/util/: IncludeTest.cpp
libs/bsw/util/test/src/util/command/: CommandContextTest.cpp  GroupCommandTest.cpp  HelpCommandTest.cpp  ICommandTest.cpp  ParentCommandTest.cpp  SimpleCommandTest.cpp
libs/bsw/util/test/src/util/crc/: Crc16Test.cpp  Crc32Test.cpp  Crc8Test.cpp  CrcRegisterTest.cpp  CrcTest.cpp  LookupTableTest.cpp  ReflectTest.cpp  XorTest.cpp
libs/bsw/util/test/src/util/defer/: DeferTest.cpp
libs/bsw/util/test/src/util/format/: AttributedStringTest.cpp  PrintfArgumentReaderTest.cpp  PrintfFormatScannerTest.cpp  PrintfFormatterTest.cpp  SharedStringWriterTest.cpp  StringWriterTest.cpp  Vt100AttributedStringFormatterTest.cpp
libs/bsw/util/test/src/util/logger/: ComponentInfoTest.cpp  LevelInfoTest.cpp  LoggerTest.cpp
libs/bsw/util/test/src/util/math/: MovingAverageTest.cpp
libs/bsw/util/test/src/util/memory/: BitTest.cpp  BuddyMemoryManagerTest.cpp
libs/bsw/util/test/src/util/meta/: BinaryValueTest.cpp  BitmaskTest.cpp
libs/bsw/util/test/src/util/spsc/: QueueTest.cpp
libs/bsw/util/test/src/util/stream/: ByteBufferOutputStreamTest.cpp  NormalizeLfOutputStreamTest.cpp  NullOutputStreamTest.cpp  SharedOutputStreamResourceTest.cpp  SharedOutputStreamTest.cpp  StdinStreamTest.cpp  StdoutStreamTest.cpp  StringBufferOutputStreamTest.cpp  TaggedOutputHelperTest.cpp  TaggedOutputStreamTest.cpp  TaggedSharedOutputStreamTest.cpp
libs/bsw/util/test/src/util/string/: ConstStringTest.cpp
libs/bsw/util/test/src/util/types/: EnumTest.cpp
libs/rust/console_out/: Cargo.toml
libs/rust/console_out/src/: lib.rs
(+3123 files in other folders)
