# *******************************************************************************
# Copyright (c) 2024 Accenture
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

platform(
    name = "s32k148",
    constraint_values = [
        "@platforms//cpu:armv7e-m",
        "@platforms//os:none",
    ],
)
